# typical

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  build.py  mkdocs.yml  mypy.ini  netlify.toml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  macos-install.sh  ubuntu-install.sh
.github/workflows/: lint.yml  pythonpublish.yml  run_tests.yml  tag-release.yml  test-lint.yml  testfull.yml  testpush.yml  tests.yml
benchmark/: invalid.json  requirements.txt  test_benchmarks.py  valid.json
benchmark/models/: apisch.py  drf.py  functional.py  klass.py  marsh.py  protocol.py  pyd.py  tmarsh.py  typ.py
docs/: .buildinfo  .pages  benchmarks.md  conf.py  genindex.html  index.html  index.md  index.rst  objects.inv  overview.html  overview.md  overview.rst  py-modindex.html  search.html  searchindex.js  sitemap.xml  why.html  why.md
docs/_modules/: decimal.html  index.html  inspect.html  typing.html
docs/_modules/typic/: api.html  checks.html  coercer.html  gen.html  klass.html  util.html
docs/_modules/typic/constraints/: array.html  common.html  error.html  mapping.html  number.html  text.html
docs/_modules/typic/schema/: field.html  schema.html
docs/_modules/typic/types/: dsn.html  email.html  frozendict.html  path.html  secret.html  url.html
docs/_sources/: why.rst.txt
docs/_sources/api/: gen.rst.txt
docs/_sources/extras/: utilities.rst.txt
docs/_sources/usage/: advanced.rst.txt
docs/_static/: alabaster.css  documentation_options.js  sitemap.xml
docs/api/: api.html  api.md  coercer.html  coercer.md  coercer.rst  constraints.html  constraints.md  gen.html  gen.md  index.html  index.md  index.rst  klass.html  klass.md  schema.html  schema.md  schema.rst  serde.rst
docs/extras/: checks.html  checks.md  constraints.html  constraints.md  constraints.rst  index.html  index.md  index.rst  mypy.rst  schema.html  schema.md  schema.rst  settings.html  settings.md  settings.rst  types.html  types.md  utilities.html  utilities.md
docs/img/: sitemap.xml
docs/usage/: .pages  advanced.html  advanced.md  advanced.rst  api.md  examples.html  examples.md  experimental.md  external.md  index.html  index.rst  quickstart.html  quickstart.md  serdes.md  settings.md  strict-mode.md  strict-mode.rst  types.md  validation.md
docsrc/: Makefile  conf.py  index.rst  why.rst
docsrc/api/: api.rst  constraints.rst  klass.rst
docsrc/extras/: checks.rst  index.rst  types.rst
docsrc/usage/: examples.rst  index.rst  quickstart.rst
mkdocs/: .pages  CHANGELOG.md  _redirects  benchmarks.md  index.md
mkdocs/usage/: .pages  api.md  external.md  index.md  serdes.md  settings.md  types.md  validation.md
src/typic/: __init__.py
src/typical/: __init__.py  api.py  checks.py  classes.py  compat.py  desers.py  env.py  graph.py  inspection.py  mypy.py  resolver.py
src/typical/constraints/: __init__.py  api.py  engine.py  factory.py
src/typical/constraints/array/: __init__.py  assertions.py  validator.py
src/typical/constraints/core/: assertions.py  error.py  structs.py  validators.py
src/typical/constraints/decimal/: assertions.py  (+1 more)
src/typical/core/: annotations.py  constants.py  desers.py  future.py  gen.py  graph.py  interfaces.py  json.py  resolver.py  strict.py
src/typical/magic/: __init__.py  klass.py  settings.py  typed.py
src/typical/serde/: abstract.py  binder.py  translator.py
src/typical/types/: __init__.py  dsn.py  email.py  frozendict.py  path.py  secret.py  url.py
tests/: objects.py  test_bind.py  test_schema.py  test_serdes.py  test_settings.py  test_typed.py  test_util.py
tests/3p/: test_pandas.py
tests/constraints/: test_array.py  test_factory.py  test_mapping.py  test_multi.py  test_number.py  test_text.py  test_type.py
tests/custom_types/: test_dsn.py  test_email.py  test_frozendict.py  test_path.py  test_secret.py  test_url.py
tests/ext/: test_json.py  test_schema.py
tests/ext/schema/: test_json_schema.py
tests/legacy/: objects.py  test_bind.py  test_serdes.py  test_settings.py  test_typed.py
tests/legacy/constraints/: test_factory.py
tests/legacy/custom_types/: test_dsn.py  test_email.py  test_frozendict.py  test_path.py  test_secret.py  test_url.py
tests/legacy/ext/: test_json.py
tests/legacy/module/: index.py  other.py
tests/legacy/mypy/: test_mypy.py
tests/module/: index.py  other.py
tests/mypy/: test_mypy.py
tests/mypy/config/: mypy.ini
tests/mypy/module/: success.py
tests/mypy/output/: fail.txt
tests/serdes/des/: test_routines.py
tests/unit/: test_checks.py  test_graph.py  test_inspection.py
typic/: __about__.py  __init__.py  api.py  bind.py  checks.py  coercer.py  common.py  compat.py  ensure.py  env.py  eval.py  gen.py  generics.py  graph.py  json.py  klass.py  mypy.py  serde.py  serdes.py  strict.py  typed.py  util.py
typic/constraints/: __init__.py  array.py  common.py  error.py  factory.py  mapping.py  number.py  text.py
typic/constraints/array/: __init__.py  builder.py  obj.py
typic/constraints/common/: __init__.py  compiler.py  error.py  obj.py
typic/constraints/mapping/: builder.py  obj.py
typic/constraints/number/: builder.py  obj.py
typic/constraints/text/: builder.py  obj.py
typic/core/: annotations.py  constants.py  interfaces.py  json.py  resolver.py  strings.py
typic/core/constraints/: __init__.py  api.py  engine.py  factory.py
typic/core/schema/: __init__.py  abc.py  builder.py
typic/core/serde/: __init__.py  binder.py  translator.py
typic/ext/: json.py
typic/ext/schema/: __init__.py  compat.py  field.py  obj.py  schema.py
typic/schema/: __init__.py  field.py  schema.py
typic/serde/: binder.py  common.py  des.py  obj.py  resolver.py  ser.py  translator.py
typic/serde/des/: factory.py  routines.py
typic/serde/ser/: factory.py  routines.py
typic/types/: __init__.py  dsn.py  email.py  frozendict.py  generics.py  path.py  secret.py  url.py
typic/types/networking/: __init__.py  dsn.py  email.py  obj.py  url.py
(+99 files in other folders)
