[tool.poetry]
name = "typical"
version = "2.8.1"
packages = [
    {include = "typic", from = "src"},
    {include = "typical", from = "src"},
]
version = "2.8.0"
description = "Typical: Python's Typing Toolkit."
authors = ["Sean Stewart <sean_stewart@me.com>"]
license = "MIT"
readme = "docs/index.md"
repository = "https://github.com/seandstewart/typical"
keywords = ["typing", "data", "annotations", "validation", "json-schema"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = ["README.md", "LICENSE"]
exclude = ["tests", "docs", "docsrc", "benchmark"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
inflection = "^0.5"
pendulum = "^2.1"
fastjsonschema = {version = "^2.14", optional = true}
ujson = {version = ">=2.0", optional = true}
orjson = {version = "^3.6.3", optional = true}
typing-extensions = {version = "^4", python = "<3.12"}
future-typing = "^0.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2"
pytest-cov = "^4"
pandas = "^1.1.3"
sqlalchemy = "^1.3.13"
asyncpg = "^0.27.0"
pytest-parametrize-suite = "^23.1.1"

[tool.poetry.group.benchmarks.dependencies]
pytest-benchmark = {version = "^4", extras = ["histogram"]}
marshmallow = "^3.2"
djangorestframework = "^3.10"
pydantic = {version = "^1", extras = ["email"]}
django = "^4"
apischema = "^0.17.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^5"
mypy = "^0.991"
black = "^22"
# mypy needs these....
types-python-dateutil = "*"
types-setuptools = "*"
types-toml = "*"
types-typed-ast = "*"
types-ujson = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.1"
mkdocs-material = "^8"
mkdocs-awesome-pages-plugin = "^2.2.1"
pymdown-extensions = "^9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2"
sqlalchemy-stubs = "^0.4"
bumpver = "^2022"
bpython = "^0.21"
fastjsonschema = "^2.14"
orjson = "^3.6.3"
ujson = "^5"

[tool.poetry.extras]
schema = ["fastjsonschema"]
json = ["orjson"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv*
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/"
no_namespace_packages = true
python_version = "3.11"
install_types = true
non_interactive = true
ignore_missing_imports = true
no_strict_optional = true
follow_imports = "silent"
exclude = ".*tests/.*|.*docs/.*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[bumpver]
current_version = "v2.8.1"
version_pattern = "vMAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version to {new_version} [ci skip]"
tag = false
push = true
commit = true

[bumpver.file_patterns]
"pyproject.toml" = [ 'version = "{pep440_version}"', 'current_version = "{version}"' ]
"typic/__init__.py" = ['__version__ = "{pep440_version}"']
